manifests/cluster-spinnaker/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-ui
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "spinnaker"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - spin-ui.stg.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: spin-ui.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: spin-deck 
          servicePort: 9000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-api
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "spinnaker"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - spin-api.stg.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: spin-api.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: spin-gate 
          servicePort: 8084
